# melee-harness

./: .gitignore  LICENSE  README.md  permuter_settings.toml  setup.sh  sync.sh
.claude/: settings.json  settings.local.json.example
.claude/hooks/: check_inline_vars.py
.claude/skills/decomp-progress/: SKILL.md
.claude/skills/easy-funcs/: SKILL.md
.claude/skills/ground-decomp/: SKILL.md
.claude/skills/item-decomp/: SKILL.md
.claude/skills/melee-decomp/: SKILL.md
.claude/skills/mismatch-db/: SKILL.md
.claude/skills/opseq/: SKILL.md
decomp-permuter/: README.md  import.py
decomp-permuter/src/: objdump.py  scorer.py
m2c/m2c/: main.py  options.py  translate.py  types.py
m2c/tests/end_to_end/struct/: irix-g-out.c
m2c/tests/end_to_end/void_field_type/: ctx.h  test-flags.txt  test-out.c  test.s
m2c/tests/end_to_end/void_field_type_known_struct/: ctx.h  test-flags.txt  test-out.c  test.s
mwcc_debug/: .gitignore  README.md  build.bat  build_macos.sh  mwcc_debug.c  mwcc_debug.def  patch_mwcceppc_for_wibo.py
objdiff/: Cargo.toml
objdiff/objdiff-cli/: Cargo.toml
objdiff/objdiff-cli/src/cmd/: diff.rs
objdiff/objdiff-core/: Cargo.toml
tools/: check_type_erasing_casts.py  checkdiff.py  decomp.py  fix_includes.py  gen_item_state_table.py  infer_struct.py  mwcc_dump.py  objdiff_path.py  permute.py  stack_permute.py
tools/decomp-permuter/: .gitignore  permuter_settings.toml  prelude_ppc.inc
tools/decomp-permuter/src/: ast_util.py  candidate.py  main.py  permuter.py  randomizer.py
wibo/src/: loader.cpp  macros.S  main.cpp  modules.h
(+1 files in other folders)
