[workspace]
members = [
    "objdiff-cli",
    "objdiff-core",
]
resolver = "3"

[workspace.package]
version = "3.7.1"
authors = ["Luke Street <luke@street.dev>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/encounter/objdiff"
rust-version = "1.88"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[profile.release-min]
inherits = "release-lto"
opt-level = "z"
